--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,8 @@
 @tailwind utilities;
 
 
-.house-bg{
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7) 0, rgba(0, 0, 0, 0.7) 60%,
-    rgba(0, 0, 0, 0.7) 100%), url(https://th.bing.com/th/id/R.ff20b5ef8b0405610b226866b74b12f2?rik=eGIy74viLRY%2b%2bA&riu=http%3a%2f%2fww1.prweb.com%2fprfiles%2f2015%2f03%2f02%2f12556168%2fGeneva_Q1_Facade.jpg&ehk=JPpfgQiaCOhK7BwYU8TBB6FCKISsQc%2fvK6kd9ElEKGs%3d&risl=1&pid=ImgRaw&r=0) ;
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    /* @apply rounded-xl shadow-2xl; */
+body{
+  background-color: #F5F5F5;
 }
 
 @keyframes moveUpDown {
@@ -56,3 +51,65 @@
     /* transition-delay: 3s;  */
     /* Delay hiding */
   /* } */
+
+  .logos{
+    /* position: relative; */
+    z-index: 1;
+  }
+
+  .logo-container{
+    /* animation-name: classwork; */
+    /* animation-duration: 5s; */
+    /* animation-iteration-count: infinite; */
+    position: absolute;
+    animation: logos 10s linear infinite;
+    overflow: hidden;
+  }
+  .card{
+    transition: transform 1s;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .card:hover{
+    transform: translateY(-20px);
+  }
+
+
+  @keyframes logos {
+    0% {
+      left: 100%;
+    }
+
+    100% {
+      left: -150%;
+    }
+  }
+.arrow-container{
+  /* display:none; */
+}
+.arrow{
+  transform: rotate(-30deg);
+}
+
+ .card:hover .arrow-container{
+  background-color: orangered;
+  border-radius: 50%;
+  /* padding: 30px; */
+ }
+ .card:hover .title{
+  color: orangered;
+ }
+ .slant-container{
+  /* background-color: palevioletred; */
+ }
+ .slant-text{
+  position: absolute;
+  transform: rotate(35deg);
+  display: inline-block;
+  right: -30px;
+  top: 10px;
+  font-size: 10px;
+  /* overflow: hidden; */
+  /* text-overflow: ellipsis; */
+ }
