--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body{
   }
   
   .bubble-animation {
-    @apply relative bottom-9 left-1/4 overflow-hidden  transform -translate-x-1/2;
+    @apply relative bottom-1 ;
     animation: moveUpDown 4s infinite ease-in-out;
   }
 
@@ -25,6 +25,20 @@ body{
   .dropdown-container {
     position: relative;
     display: flex;
+  }
+
+  .dropdown-container1 {
+    position: relative;
+    display: flex;
+  }
+  .dropdown-menu1{
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 35px; /* Adjust to the desired offset */
+    left: 0;
+    z-index: 10;
+    transition: opacity 0.5s ease, visibility 0.5s ease; 
   }
 
   .dropdown-menu {
@@ -38,9 +52,13 @@ body{
     /* Short transition for fade effect */
   }
 
+
+
+
   /* Show the dropdown on hover */
   .dropdown-container:hover .dropdown-menu,
-  .dropdown-menu:hover {
+  .dropdown-container:hover .dropdown-menu1,
+  .dropdown-menu:hover, .dropdown-menu1:hover {
     opacity: 1;
     visibility: visible;
     transition-delay: 0s; /* Instant show */
@@ -126,3 +144,62 @@ body{
   .animate-marquee {
     animation: marquee 60s linear infinite;
   }
+
+  .loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Transparent dark overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Ensure it sits on top of everything */
+  }
+  
+  .loader {
+    border: 4px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 4px solid #3498db;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+
+  .status-message {
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 15px 25px;
+    border-radius: 8px;
+    font-size: 1.2rem;
+    color: #fff;
+    z-index: 9999;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+  .status-message.visible {
+    opacity: 1;
+  }
+  
+  .status-message.hidden {
+    opacity: 0;
+  }
+  
+  .status-message.success {
+    background-color: #28a745;
+  }
+  
+  .status-message.error {
+    background-color: #dc3545;
+  }
+  
